fix: autenticação endpoints por cada role